--- a/app/src/main/res/layout/content_make_request.xml
+++ b/app/src/main/res/layout/content_make_request.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/linearLayout4">
 
-        <TextView
+        <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Select An image"
@@ -49,7 +49,7 @@
 
     </LinearLayout>
 
-    <TextView
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Record Audio"
@@ -73,36 +73,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/device_audio_ib"
-            android:src="@mipmap/audio"
             android:background="#00ffffff"
             android:layout_marginTop="7dp"
             android:layout_marginLeft="20dp" />
+           <!-- android:src="@mipmap/audio"-->
+
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/record_ib"
-            android:src="@mipmap/record1"
             android:background="#00ffffff"
             android:layout_marginLeft="30dp" />
+        <!-- android:src="@mipmap/record1"-->
+
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/stop_ib"
-            android:src="@mipmap/stop2"
             android:background="#00ffffff"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="35dp" />
+            <!--android:src="@mipmap/stop2"-->
+
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/play_ib"
-            android:src="@mipmap/play1"
             android:background="#00ffffff"
             android:layout_marginLeft="20dp" />
+           <!-- android:src="@mipmap/play1"-->
+
 
     </LinearLayout>
 
@@ -115,27 +119,27 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout7">
 
-        <TextView
+        <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
             android:layout_width="76dp"
             android:layout_height="70dp"
             android:text="Select Audio File from Device"
             android:id="@+id/textView4" />
 
-        <TextView
+        <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Record"
             android:id="@+id/textView5"
             android:layout_marginLeft="10dp" />
 
-        <TextView
+        <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
             android:layout_width="72dp"
             android:layout_height="63dp"
             android:text="Stop Recording"
             android:id="@+id/textView6"
             android:layout_marginLeft="50dp" />
 
-        <TextView
+        <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Play"
