Added bold text option

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,11 +2,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory>
     android:title="fonts">
-    <ListPreference android:title="Select A Font"
+    <ListPreference android:title="Select A Font Size"
                     android:entryValues="@array/font_value"
                     android:entries="@array/font_sizes"
                     android:summary="font_preference"
                     android:key="font_preference"/>
+
+        <CheckBoxPreference android:title="Bold Font"
+            android:summary="Display all text in bold"
+            android:key="font_bold"/>
+            />
 
 </PreferenceCategory>
 </PreferenceScreen>
