--- a/app/src/main/res/layout/content_make_request.xml
+++ b/app/src/main/res/layout/content_make_request.xml
@@ -123,6 +123,7 @@
             android:layout_width="76dp"
             android:layout_height="70dp"
             android:text="Select Audio File from Device"
+            android:textStyle="normal"
             android:id="@+id/textView4" />
 
         <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
@@ -130,6 +131,7 @@
             android:layout_height="wrap_content"
             android:text="Record"
             android:id="@+id/textView5"
+            android:textStyle="normal"
             android:layout_marginLeft="10dp" />
 
         <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
@@ -137,6 +139,7 @@
             android:layout_height="63dp"
             android:text="Stop Recording"
             android:id="@+id/textView6"
+            android:textStyle="normal"
             android:layout_marginLeft="50dp" />
 
         <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
@@ -144,6 +147,7 @@
             android:layout_height="wrap_content"
             android:text="Play"
             android:id="@+id/textView7"
+            android:textStyle="normal"
             android:layout_marginLeft="35dp" />
     </LinearLayout>
 
