--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
     tools:context=".MainUI.MainActivity">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -28,6 +28,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/settings_ib"
             android:src="@mipmap/ic_launcher" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/alarm_ib"
+            android:src="@mipmap/audio" />
     </LinearLayout>
 
     <GridView
