--- a/app/src/main/res/layout/content_password.xml
+++ b/app/src/main/res/layout/content_password.xml
@@ -13,7 +13,7 @@
         android:layout_alignLeft="@+id/textView9"
         android:layout_alignStart="@+id/textView9" />
 
-    <TextView
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
