can play sound for each request clicked linked selected commands for populating grid view

--- a/app/src/main/res/layout/requests.xml
+++ b/app/src/main/res/layout/requests.xml
@@ -17,4 +17,12 @@
         android:text="New Text"
         android:id="@+id/requestText_tv"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/AudioBytes_tv"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
