Added a csv file to read data into the database

--- a/app/src/main/res/layout/content_password.xml
+++ b/app/src/main/res/layout/content_password.xml
@@ -3,15 +3,28 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Enter User Name : "
+        android:id="@+id/textView10"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="70dp" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView9"
-        android:layout_alignLeft="@+id/textView9"
-        android:layout_alignStart="@+id/textView9" />
+        android:id="@+id/userNameText"
+        android:layout_below="@+id/textView10"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
     <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
@@ -19,12 +32,19 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Enter New Password : "
         android:id="@+id/textView9"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="56dp" />
+        android:layout_above="@+id/passwordText"
+        android:layout_alignLeft="@+id/passwordText"
+        android:layout_alignStart="@+id/passwordText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordText"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -32,8 +52,8 @@
         android:layout_height="wrap_content"
         android:text="Go"
         android:id="@+id/button"
-        android:layout_alignTop="@+id/editText"
-        android:layout_toRightOf="@+id/editText"
-        android:layout_toEndOf="@+id/editText" />
-
+        android:layout_below="@+id/passwordText"
+        android:layout_alignLeft="@+id/userNameText"
+        android:layout_alignStart="@+id/userNameText"
+        android:layout_marginTop="57dp" />
 </RelativeLayout>
