--- a/app/src/main/res/layout/requests.xml
+++ b/app/src/main/res/layout/requests.xml
@@ -18,7 +18,7 @@
         android:id="@+id/requestText_tv"
         android:layout_gravity="center_horizontal" />
 
-    <TextView
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -26,7 +26,7 @@
         android:id="@+id/AudioBytes_tv"
         android:layout_gravity="center_horizontal" />
 
-    <TextView
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
