--- a/app/src/main/res/layout/content_remove_request.xml
+++ b/app/src/main/res/layout/content_remove_request.xml
@@ -20,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cat_spinner"
-        android:layout_below="@+id/delete_request"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +31,8 @@
         android:text="WARNING: If you delete a category, any requests within will also be deleted!"
         android:id="@+id/textView4"
         android:layout_below="@+id/cat_spinner"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -39,5 +40,22 @@
         android:text="DELETE CATEGORY"
         android:id="@+id/delete_category"
         android:layout_below="@+id/textView4"
+        android:layout_alignRight="@+id/delete_request"
+        android:layout_alignEnd="@+id/delete_request" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sub_cat_spinner"
+        android:layout_below="@+id/delete_request"
+        android:layout_alignRight="@+id/delete_request"
+        android:layout_alignEnd="@+id/delete_request" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DELETE SUBCATEGORY"
+        android:id="@+id/delete_sub_category"
+        android:layout_below="@+id/sub_cat_spinner"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
