--- a/app/src/main/res/layout/set_password.xml
+++ b/app/src/main/res/layout/set_password.xml
@@ -6,22 +6,6 @@
     <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Set New Password : "
-        android:id="@+id/editText2"
-        android:layout_gravity="center_horizontal" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passwordId"
-        android:layout_gravity="center_horizontal" />
-
-    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Enter Username"
         android:id="@+id/userName1" />
@@ -30,6 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/userNametyped" />
+
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Set New Password : "
+        android:id="@+id/editText2" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordId" />
 
     <Spinner
         android:layout_width="match_parent"
