--- a/app/src/main/res/layout/content_reset_pass.xml
+++ b/app/src/main/res/layout/content_reset_pass.xml
@@ -7,10 +7,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Your Username : "
+        android:id="@+id/user_stat"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_fill"
+        android:layout_below="@+id/user_stat"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/ques_fill"
+        android:layout_alignEnd="@+id/ques_fill" />
+
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/ques_fill"
         android:layout_gravity="center_horizontal"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/user_fill"
         android:layout_toRightOf="@+id/question_stat"
         android:layout_toEndOf="@+id/question_stat" />
 
@@ -20,7 +40,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Your question : "
         android:id="@+id/question_stat"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/ques_fill"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
