--- a/app/src/main/res/layout/content_remove_request.xml
+++ b/app/src/main/res/layout/content_remove_request.xml
@@ -16,32 +16,15 @@
         android:layout_below="@+id/requests_spinner"
         android:layout_centerHorizontal="true" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cat_spinner"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="WARNING: If you delete a category, any requests within will also be deleted!"
         android:id="@+id/textView4"
-        android:layout_below="@+id/cat_spinner"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DELETE CATEGORY"
-        android:id="@+id/delete_category"
-        android:layout_below="@+id/textView4"
-        android:layout_alignRight="@+id/delete_request"
-        android:layout_alignEnd="@+id/delete_request" />
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
 
     <Spinner
         android:layout_width="wrap_content"
