--- a/app/src/main/res/layout/content_choose_category.xml
+++ b/app/src/main/res/layout/content_choose_category.xml
@@ -12,47 +12,100 @@
     tools:context="com.example.samsonaiyegbusi.strokeapp.MainUI.ChooseCategory"
     tools:showIn="@layout/activity_choose_category">
 
-    <Spinner
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/chooseCategory_sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/linearLayout8">
 
-    <Spinner
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a category"
+            android:id="@+id/textView5"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/Next_ib"
+            android:textSize="20dp"
+            android:layout_alignRight="@+id/makeCategoryImg_iv"
+            android:layout_alignEnd="@+id/makeCategoryImg_iv"
+            android:layout_gravity="center_horizontal" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chooseCategory_sp"
+            android:layout_below="@+id/textView5"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Subcategory"
+            android:id="@+id/button2"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/chooseSubcategory_sb"
-        android:layout_below="@+id/chooseCategory_sp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/linearLayout8"
+        android:id="@+id/linearLayout9">
 
-    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/makeCategoryImg_iv"
-        android:src="@android:mipmap/sym_def_app_icon"
-        android:layout_below="@+id/chooseSubcategory_sb"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a subcategory"
+            android:id="@+id/textView6"
+            android:textSize="20dp"
+            android:layout_below="@+id/chooseCategory_sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="90dp" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chooseSubcategory_sb"
+            android:layout_below="@+id/textView6"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </LinearLayout>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/makeCategory_et"
-        android:layout_below="@+id/makeCategoryImg_iv"
+        android:hint="Name of category"
+        android:background="#00ffffff"
+        android:layout_above="@+id/Next_ib"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/makeCategoryImg_iv"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="Name of category"
-        android:background="#00ffffff" />
+        android:layout_alignParentEnd="true" />
+
+    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/makeCategoryImg_iv"
+        android:src="@android:mipmap/sym_def_app_icon"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/linearLayout9"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
         android:id="@+id/Next_ib"
-        android:layout_below="@+id/makeCategory_et"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp" />
+        android:layout_marginBottom="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/makeCategoryImg_iv"
+        android:layout_alignEnd="@+id/makeCategoryImg_iv" />
+
 </RelativeLayout>
