--- a/app/src/main/res/layout/requests.xml
+++ b/app/src/main/res/layout/requests.xml
@@ -20,7 +20,7 @@
         android:id="@+id/requestText_tv"
         android:layout_gravity="center_horizontal" />
 
-    <com.example.samsonaiyegbusi.strokeapp.MainUI.CustomTextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
