--- a/app/src/main/res/layout/content_requests.xml
+++ b/app/src/main/res/layout/content_requests.xml
@@ -13,7 +13,7 @@
     tools:showIn="@layout/activity_requests">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -26,11 +26,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/requests_settings_ib"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/gear"
+            android:background="#00ffffff" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/request_alarm_ib"
+            android:src="@mipmap/alarm"
+            android:background="#00ffffff"
+            android:layout_marginLeft="30dp" />
     </LinearLayout>
 
     <GridView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/requests_gridView"
         android:layout_alignParentLeft="true"
